--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/docker/tpl/Add.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/docker/tpl/Add.razor
@@ -4,13 +4,15 @@
 @using FOPS.Abstract.K8S.Enum
 @using FOPS.Abstract.K8S.Server
 @using FS.Extends
+@using FOPS.Abstract.Docker.Entity
+@using FOPS.Abstract.Docker.Server
 @inject IIocManager _iocManager;
 @inject NavigationManager nav;
 @inject IJSRuntime js;
 
 <div class="layui-card">
     <div class="layui-card-header">
-        添加Yaml模板
+        添加Dockerfile模板
         <div class="layui-right">
             <button class="layui-btn" @onclick="GotoList"><i class="am-icon-plus"></i> 列表</button>
         </div>
@@ -19,26 +21,13 @@
         <div class="layui-form-item">
             <label class="layui-form-label">模板名称</label>
             <div class="layui-input-inline">
-                <input type="text" @bind="_info.Name" autocomplete="off" placeholder="请输入Yaml模板名称" class="layui-input">
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <div class="layui-inline">
-                <label class="layui-form-label">k8s类型</label>
-                <div class="layui-input-block">
-                    <select @bind="_info.K8SKindType">
-                        @foreach (var eumK8SKind in Enum.GetValues<EumK8SKind>())
-                        {
-                            <option value="@eumK8SKind.ToString()">@eumK8SKind.ToString()</option>
-                        }
-                    </select>
-                </div>
+                <input type="text" @bind="_info.Name" autocomplete="off" placeholder="请输入Dockerfile模板名称" class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">模板内容</label>
             <div class="layui-input-block">
-                <textarea @bind="_info.Template" placeholder="Yaml模板内容" class="layui-textarea" style="margin-top: 0; margin-bottom: 0; height: 400px;"></textarea>
+                <textarea @bind="_info.Template" placeholder="Dockerfile模板内容" class="layui-textarea" style="margin-top: 0; margin-bottom: 0; height: 400px;"></textarea>
             </div>
         </div>
         <div class="layui-form-item layui-layout-admin">
@@ -53,7 +42,7 @@
 
 @code{
 
-    private readonly YamlTplVO _info = new() { }; // K8SKindType = EumK8SKind.Deployment
+    private readonly DockerfileTplVO _info = new() { };
 
     private async Task AddInfo()
     {
@@ -61,12 +50,12 @@
         {
             if (_info.Name == null)
             {
-                throw new Exception("Yaml模板名称。");
+                throw new Exception("Dockerfile模板名称。");
             }
                 
-            await _iocManager.Resolve<IYamlTplService>().AddAsync(_info);
+            await _iocManager.Resolve<IDockerfileTplService>().AddAsync(_info);
             await js.InvokeVoidAsync("layer.alert", "添加成功", new {icon = 1});
-            nav.NavigateTo("/k8s/tpl/list");
+            nav.NavigateTo("/docker/tpl/list");
         }
         catch (Exception e)
         {
@@ -76,6 +65,6 @@
 
     private void GotoList()
     {
-        nav.NavigateTo("/k8s/tpl/list");
+        nav.NavigateTo("/docker/tpl/list");
     }
 }
