--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/docker/hub/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/docker/hub/List.razor
@@ -9,7 +9,7 @@
     <div class="layui-card-header" id="anchor-play-header">
         镜像仓库
         <div class="layui-right">
-            <button class="layui-btn layui-btn-right" @onclick=GotoAdd><i class="am-icon-plus"></i> 添加Git</button>
+            <button class="layui-btn layui-btn-right" @onclick=GotoAdd><i class="am-icon-plus"></i> 添加仓库</button>
         </div>
     </div>
     <div class="layui-card-body">
