--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/docker/tpl/Update.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/docker/tpl/Update.razor
@@ -1,9 +1,5 @@
 @page "/docker/tpl/update/{id:int}"
 @using Microsoft.AspNetCore.Components
-@using FOPS.Abstract.K8S.Entity
-@using FOPS.Abstract.K8S.Enum
-@using FOPS.Abstract.K8S.Server
-@using FS.Extends
 @using FOPS.Abstract.Docker.Entity
 @using FOPS.Abstract.Docker.Server
 @inject IIocManager _iocManager;
@@ -12,7 +8,7 @@
 
 <div class="layui-card">
     <div class="layui-card-header">
-        添加Dockerfile模板
+        编辑Dockerfile模板
         <div class="layui-right">
             <button class="layui-btn" @onclick="GotoList"><i class="am-icon-plus"></i> 列表</button>
         </div>
