--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/task_group/Update.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/task_group/Update.razor
@@ -9,7 +9,7 @@
     <div class="layui-col-md6">
         <div class="layui-card">
             <div class="layui-card-header">
-                基础信息
+                编辑任务组
                 <div class="layui-right">
                     <button class="layui-btn" @onclick="GotoList"><i class="am-icon-plus"></i> 列表</button>
                 </div>
