--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/deploy/Update.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/deploy/Update.razor
@@ -11,7 +11,7 @@
 
 <div class="layui-card">
     <div class="layui-card-header">
-        添加Yaml模板
+        编辑发布
         <div class="layui-right">
             <button class="layui-btn" @onclick="GotoList"><i class="am-icon-plus"></i> 列表</button>
         </div>
