--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/docker/tpl/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/docker/tpl/List.razor
@@ -24,7 +24,7 @@
                                 </div>
                             </th>
                             <th data-field="Title">
-                                <div class="layui-table-cell laytable-cell-14-0-2">
+                                <div class="layui-table-cell laytable-cell-14-0-1">
                                     <span>模板名称</span>
                                 </div>
                             </th>
@@ -44,7 +44,7 @@
                                 </td>
                                 <td data-field="Title">
                                     <div class="laytable-cell-14-0-1">
-                                        <a href="/k8s/tpl/update/@info.Id">@info.Name</a>
+                                        <a href="/docker/tpl/update/@info.Id">@info.Name</a>
                                     </div>
                                 </td>
                             </tr>
