--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/cluster/Add.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/cluster/Add.razor
@@ -10,7 +10,7 @@
 
 <div class="layui-card">
     <div class="layui-card-header">
-        添加Yaml模板
+        添加集群
         <div class="layui-right">
             <button class="layui-btn" @onclick="GotoList"><i class="am-icon-plus"></i> 列表</button>
         </div>
